# fiber-closure

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  prepare.sh  pyproject.toml  requirements.txt  train.sh
.github/workflows/: build-image.yml  package.yml
cfg/: fiber-tiny.cfg  fiber.cfg  fiber.data  fiber.names
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: train_inference.md
inference/: README.md  __init__.py  config.py  darknet.py  detector.py  main.py  postprocess.py  schemas.py  slicer.py  utils.py
scripts/: export-image.sh  generate_anchors.py  prepare_training.py  slice_dataset.py
scripts/tests/: __init__.py  test_prepare_sh.py  test_prepare_training.py  test_slice_dataset.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_detect_endpoint.py  test_detector.py  test_integration.py  test_postprocess.py  test_slicer.py  test_utils.py
tests/e2e/: __init__.py  test_full_pipeline.py
